--- a/src/main/webapp/WorkOrderService.html
+++ b/src/main/webapp/WorkOrderService.html
@@ -41,8 +41,7 @@
 		<h3>Open Indent</h3>
 
 
-		<form th:action="@{/openindent/}" method="POST"
-			th:object="${openIndent}">
+		<form th:action="@{/openindent/}" method="POST">
 
 
 			<div class="form-border">
@@ -51,22 +50,21 @@
 					<div class="form-group col-md-4">
 						<label for="inputEmail4">Indent Number</label> <input type="text"
 							class="form-control" id="inputEmail4" placeholder="indent number"
-							th:field="*{indentNumber}">
+							>
 					</div>
 					<div class="form-group col-md-4">
 						<label for="inputPassword4">Indent Date</label> <input type="date"
 							class="form-control" id=""
-							placeholder="indent date" th:field="*{indentDate}">
+							placeholder="indent date">
 					</div>
 
 					<div class="form-group col-md-4">
 						<label class="form-label">Employee Code</label> <label
 							style="color: red">*</label> <select class="form-control"
 							title="employee code" id="employee" required
-							onchange="indentGetEmployee()">
+							>
 							<option value="">Select Employee</option>
-							<option th:each="employee :  ${employeeList}"
-								th:text="${employee.empCode}" th:value=" ${employee.empCode}"></option>
+							
 						</select>
 					</div>
 
@@ -74,17 +72,17 @@
 					<div class="form-group col-md-4">
 						<label for="inputAddress">Employee Name</label> <input type="text"
 							class="form-control" id="employeename"
-							placeholder="employee name" th:field="*{authEmpCode}">
+							placeholder="employee name">
 					</div>
 					<div class="form-group col-md-4">
 						<label for="inputAddress">Department Code</label> <input
 							type="text" class="form-control" id="departmentcode"
-							placeholder="department code" th:field="*{deptCode}">
+							placeholder="department code">
 					</div>
 					<div class="form-group col-md-4">
 						<label for="inputAddress">Department Name</label> <input
 							type="text" class="form-control" id="departmentname"
-							placeholder="department name" th:field="*{deptName}">
+							placeholder="department name">
 					</div>
 
 					<div class="form-group col-md-4">
@@ -120,7 +118,7 @@
 					<div class="form-group col-md-4">
 						<label for="inputAddress">Remarks</label> <input type="text"
 							class="form-control" id="inputAddress" placeholder="remarks"
-							th:field="*{remarks}">
+							>
 					</div>
 
 
@@ -135,17 +133,17 @@
 					<div class="form-group col-md-4">
 						<label for="inputEmail4">Approval Status</label> <input
 							type="text" class="form-control" id="inputEmail4"
-							placeholder="approval status" th:field="*{approvalStatus1}">
+							placeholder="approval status">
 					</div>
 					<div class="form-group col-md-4">
 						<label for="inputPassword4">Date of Approval</label> <input
 							type="date" class="form-control" id="inputPassword4"
-							placeholder="date of approval" th:field="*{approvalDate1}">
+							placeholder="date of approval">
 					</div>
 					<div class="form-group col-md-4">
 						<label for="inputPassword4">Purchase Status</label> <input
 							type="text" class="form-control" id="inputPassword4"
-							placeholder="purchase status" th:field="*{indPurStatus}">
+							placeholder="purchase status">
 					</div>
 
 				</div>
@@ -212,14 +210,14 @@
 
 								<td><input type="text" style="width: 90px;"
 									id="indItemCode0" readonly title="" required
-									name="opeIndentDetail[0].indItemCode"></td>
+									></td>
 								<!-- item description -->
 								<td><input type="text" style="width: 120px;"
 									id="salaryFrom" required title="Salary"></td>
 
 								<td><input type="text" style="width: 90px;"
 									id="qtyInStock0" title="" required
-									name="opeIndentDetail[0].qtyInStock"></td>
+									></td>
 
 
 
@@ -227,19 +225,19 @@
 
 								<td><input type="text" style="width: 90px;"
 									id="qtyProcured0" title="" required
-									name="opeIndentDetail[0].qtyProcured"></td>
+									></td>
 
 								<td><input type="text" style="width: 90px;"
 									id="qtyProcured0" title="" required
-									name="opeIndentDetail[0].pipelineQty"></td>
+									></td>
 
 
 								<td><input type="text" style="width: 90px;" id="indQty0"
 									min="18" title="Age from" required
-									name="opeIndentDetail[0].indQty"></td>
+									></td>
 
 								<td><input type="text" max="45" style="width: 90px;"
-									id="ageTo" required name="opeIndentDetail[0].approvedQty"></td>
+									id="ageTo" required ></td>
 
 								<!-- gor status -->
 								<td><input type="text" style="width: 120px;"
@@ -248,24 +246,24 @@
 
 								<td><input type="text" style="width: 90px;"
 									id="expMaxMonth" required title="max experience"
-									name="opeIndentDetail[0].currencyCode"></td>
+									></td>
 
 								<td><input type="text" style="width: 90px;"
 									id="expMaxMonth" required title="max experience"
-									name="opeIndentDetail[0].conversionvalue"></td>
+									></td>
 
 
 								<td><input type="text" style="width: 120px;"
 									id="technicalQualification" required
 									title="Technical Qualification"
-									name="opeIndentDetail[0].itemRate"></td>
+									></td>
 
 								<!--unit  -->
 								<td><input type="text" style="width: 120px;" id="salaryTo"
 									required></td>
 
 								<td><input type="text" style="width: 120px;" id="salaryTo"
-									required name="opeIndentDetail[0].totalValue"></td>
+									required></td>
 
 								<!-- total value (INR)  -->
 								<td><input type="text" style="width: 120px;" id="salaryTo"
@@ -277,11 +275,11 @@
 
 								<td><input type="text" style="width: 90px;"
 									id="purStatusItemWise" required title="minimum experience"
-									name="opeIndentDetail[0].purStatusItemWise"></td>
+									></td>
 
 
 								<td><input type="text" style="width: 120px;"
-									id="indPurpose0" required name="opeIndentDetail[0].indPurpose"></td>
+									id="indPurpose0" required></td>
 
 								<td></td>
 							</tr>
